Add aria-label attributes to social links

--- a/index.html
+++ b/index.html
@@ -450,6 +450,7 @@
                         href="https://www.instagram.com/"
                         target="_blank"
                         rel="nofollow noreferrer"
+                        aria-label="instagram"
                       >
                         <svg width="20" height="20">
                           <use href="./images/icons.svg#instagram"></use>
@@ -463,6 +464,7 @@
                         href="https://twitter.com/"
                         target="_blank"
                         rel="nofollow noreferrer"
+                        aria-label="twitter"
                       >
                         <svg width="20" height="20">
                           <use href="./images/icons.svg#twitter"></use>
@@ -476,6 +478,7 @@
                         href="https://www.facebook.com/"
                         target="_blank"
                         rel="nofollow noreferrer"
+                        aria-label="facebook"
                       >
                         <svg width="20" height="20">
                           <use href="./images/icons.svg#facebook"></use>
@@ -489,6 +492,7 @@
                         href="https://www.linkedin.com/"
                         target="_blank"
                         rel="nofollow noreferrer"
+                        aria-label="linkedin"
                       >
                         <svg width="20" height="20">
                           <use href="./images/icons.svg#linkedin"></use>
@@ -551,6 +555,7 @@
                         href="https://www.instagram.com/"
                         target="_blank"
                         rel="nofollow noreferrer"
+                        aria-label="instagram"
                       >
                         <svg width="20" height="20">
                           <use href="./images/icons.svg#instagram"></use>
@@ -564,6 +569,7 @@
                         href="https://twitter.com/"
                         target="_blank"
                         rel="nofollow noreferrer"
+                        aria-label="twitter"
                       >
                         <svg width="20" height="20">
                           <use href="./images/icons.svg#twitter"></use>
@@ -577,6 +583,7 @@
                         href="https://www.facebook.com/"
                         target="_blank"
                         rel="nofollow noreferrer"
+                        aria-label="facebook"
                       >
                         <svg width="20" height="20">
                           <use href="./images/icons.svg#facebook"></use>
@@ -590,6 +597,7 @@
                         href="https://www.linkedin.com/"
                         target="_blank"
                         rel="nofollow noreferrer"
+                        aria-label="linkedin"
                       >
                         <svg width="20" height="20">
                           <use href="./images/icons.svg#linkedin"></use>
@@ -652,6 +660,7 @@
                         href="https://www.instagram.com/"
                         target="_blank"
                         rel="nofollow noreferrer"
+                        aria-label="instagram"
                       >
                         <svg width="20" height="20">
                           <use href="./images/icons.svg#instagram"></use>
@@ -665,6 +674,7 @@
                         href="https://twitter.com/"
                         target="_blank"
                         rel="nofollow noreferrer"
+                        aria-label="twitter"
                       >
                         <svg width="20" height="20">
                           <use href="./images/icons.svg#twitter"></use>
@@ -678,6 +688,7 @@
                         href="https://www.facebook.com/"
                         target="_blank"
                         rel="nofollow noreferrer"
+                        aria-label="facebook"
                       >
                         <svg width="20" height="20">
                           <use href="./images/icons.svg#facebook"></use>
@@ -691,6 +702,7 @@
                         href="https://www.linkedin.com/"
                         target="_blank"
                         rel="nofollow noreferrer"
+                        aria-label="linkedin"
                       >
                         <svg width="20" height="20">
                           <use href="./images/icons.svg#linkedin"></use>
@@ -753,6 +765,7 @@
                         href="https://www.instagram.com/"
                         target="_blank"
                         rel="nofollow noreferrer"
+                        aria-label="instagram"
                       >
                         <svg width="20" height="20">
                           <use href="./images/icons.svg#instagram"></use>
@@ -766,6 +779,7 @@
                         href="https://twitter.com/"
                         target="_blank"
                         rel="nofollow noreferrer"
+                        aria-label="twitter"
                       >
                         <svg width="20" height="20">
                           <use href="./images/icons.svg#twitter"></use>
@@ -779,6 +793,7 @@
                         href="https://www.facebook.com/"
                         target="_blank"
                         rel="nofollow noreferrer"
+                        aria-label="facebook"
                       >
                         <svg width="20" height="20">
                           <use href="./images/icons.svg#facebook"></use>
@@ -792,6 +807,7 @@
                         href="https://www.linkedin.com/"
                         target="_blank"
                         rel="nofollow noreferrer"
+                        aria-label="linkedin"
                       >
                         <svg width="20" height="20">
                           <use href="./images/icons.svg#linkedin"></use>
@@ -898,6 +914,7 @@
                 href="https://www.instagram.com/"
                 target="_blank"
                 rel="nofollow noreferrer"
+                aria-label="instagram"
               >
                 <svg width="20" height="20">
                   <use href="./images/icons.svg#instagram"></use>
@@ -911,6 +928,7 @@
                 href="https://twitter.com/"
                 target="_blank"
                 rel="nofollow noreferrer"
+                aria-label="twitter"
               >
                 <svg width="20" height="20">
                   <use href="./images/icons.svg#twitter"></use>
@@ -924,6 +942,7 @@
                 href="https://www.facebook.com/"
                 target="_blank"
                 rel="nofollow noreferrer"
+                aria-label="facebook"
               >
                 <svg width="20" height="20">
                   <use href="./images/icons.svg#facebook"></use>
@@ -937,6 +956,7 @@
                 href="https://www.linkedin.com/"
                 target="_blank"
                 rel="nofollow noreferrer"
+                aria-label="linkedin"
               >
                 <svg width="20" height="20">
                   <use href="./images/icons.svg#linkedin"></use>
