--- a/portfolio.html
+++ b/portfolio.html
@@ -752,6 +752,7 @@
                 href="https://www.instagram.com/"
                 target="_blank"
                 rel="nofollow noreferrer"
+                aria-label="instagram"
               >
                 <svg width="20" height="20">
                   <use href="./images/icons.svg#instagram"></use>
@@ -765,6 +766,7 @@
                 href="https://twitter.com/"
                 target="_blank"
                 rel="nofollow noreferrer"
+                aria-label="twitter"
               >
                 <svg width="20" height="20">
                   <use href="./images/icons.svg#twitter"></use>
@@ -778,6 +780,7 @@
                 href="https://www.facebook.com/"
                 target="_blank"
                 rel="nofollow noreferrer"
+                aria-label="facebook"
               >
                 <svg width="20" height="20">
                   <use href="./images/icons.svg#facebook"></use>
@@ -791,6 +794,7 @@
                 href="https://www.linkedin.com/"
                 target="_blank"
                 rel="nofollow noreferrer"
+                aria-label="linkedin"
               >
                 <svg width="20" height="20">
                   <use href="./images/icons.svg#linkedin"></use>
