--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     />
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
-  <body class="page">
+  <body class="page" data-menu-page>
     <!-- Header -->
     <header class="page-header">
       <div class="container page-header__container">
