Change mobile menu

--- a/index.html
+++ b/index.html
@@ -63,87 +63,101 @@
           </button>
 
           <!-- Mobile Menu -->
-          <div class="mobile-menu" id="menu" data-menu>
-            <!-- Mobile Site Navigation -->
-            <ul class="mobile-site-nav">
-              <li class="mobile-site-nav__item">
-                <a
-                  class="mobile-site-nav__link mobile-site-nav__link--active"
-                  href="./index.html"
-                  >Студия</a
-                >
-              </li>
+          <div class="mobile-backdrop" data-menu>
+            <div class="mobile-menu" id="menu">
+              <!-- Mobile Site Navigation -->
+              <ul class="mobile-site-nav">
+                <li class="mobile-site-nav__item">
+                  <a
+                    class="mobile-site-nav__link mobile-site-nav__link--active"
+                    href="./index.html"
+                    >Студия</a
+                  >
+                </li>
 
-              <li class="mobile-site-nav__item">
-                <a class="mobile-site-nav__link" href="./portfolio.html">Портфолио</a>
-              </li>
+                <li class="mobile-site-nav__item">
+                  <a class="mobile-site-nav__link" href="./portfolio.html">Портфолио</a>
+                </li>
 
-              <li class="mobile-site-nav__item">
-                <a class="mobile-site-nav__link" href="#contacts">Контакты</a>
-              </li>
-            </ul>
+                <li class="mobile-site-nav__item">
+                  <a class="mobile-site-nav__link" href="#contacts">Контакты</a>
+                </li>
+              </ul>
 
-            <!-- Mobile Contacts -->
-            <ul class="mobile-contacts">
-              <li class="mobile-contacts__item">
-                <a class="mobile-contacts__tel" href="tel:+380961111111">
-                  +38 096 111 11 11
-                </a>
-              </li>
+              <!-- Mobile Contacts -->
+              <ul class="mobile-contacts">
+                <li class="mobile-contacts__item">
+                  <a class="mobile-contacts__link" href="tel:+380961111111">
+                    +38 096 111 11 11
+                  </a>
+                </li>
 
-              <li class="mobile-contacts__item">
-                <a class="mobile-contacts__mail" href="mailto:info@devstudio.com">
-                  info@devstudio.com
-                </a>
-              </li>
-            </ul>
+                <li class="mobile-contacts__item">
+                  <a class="mobile-contacts__link" href="mailto:info@devstudio.com">
+                    info@devstudio.com
+                  </a>
+                </li>
+              </ul>
 
-            <!-- Mobile Social Links -->
-            <ul class="mobile-social">
-              <li class="mobile-social__item">
-                <a
-                  class="mobile-social__link"
-                  href="https://www.instagram.com/"
-                  target="_blank"
-                  rel="nofollow noreferrer"
-                >
-                  Instagram
-                </a>
-              </li>
+              <!-- Social Links -->
+              <ul class="social">
+                <li class="social__item">
+                  <a
+                    class="social__link"
+                    href="https://www.instagram.com/"
+                    target="_blank"
+                    rel="nofollow noreferrer"
+                    aria-label="instagram"
+                  >
+                    <svg width="20" height="20">
+                      <use href="./images/icons.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
 
-              <li class="mobile-social__item">
-                <a
-                  class="mobile-social__link"
-                  href="https://twitter.com/"
-                  target="_blank"
-                  rel="nofollow noreferrer"
-                >
-                  Twitter
-                </a>
-              </li>
+                <li class="social__item">
+                  <a
+                    class="social__link"
+                    href="https://twitter.com/"
+                    target="_blank"
+                    rel="nofollow noreferrer"
+                    aria-label="twitter"
+                  >
+                    <svg width="20" height="20">
+                      <use href="./images/icons.svg#twitter"></use>
+                    </svg>
+                  </a>
+                </li>
 
-              <li class="mobile-social__item">
-                <a
-                  class="mobile-social__link"
-                  href="https://www.facebook.com/"
-                  target="_blank"
-                  rel="nofollow noreferrer"
-                >
-                  Facebook
-                </a>
-              </li>
+                <li class="social__item">
+                  <a
+                    class="social__link"
+                    href="https://www.facebook.com/"
+                    target="_blank"
+                    rel="nofollow noreferrer"
+                    aria-label="facebook"
+                  >
+                    <svg width="20" height="20">
+                      <use href="./images/icons.svg#facebook"></use>
+                    </svg>
+                  </a>
+                </li>
 
-              <li class="mobile-social__item">
-                <a
-                  class="mobile-social__link"
-                  href="https://www.linkedin.com/"
-                  target="_blank"
-                  rel="nofollow noreferrer"
-                >
-                  LinkedIn
-                </a>
-              </li>
-            </ul>
+                <li class="social__item">
+                  <a
+                    class="social__link"
+                    href="https://www.linkedin.com/"
+                    target="_blank"
+                    rel="nofollow noreferrer"
+                    aria-label="linkedin"
+                  >
+                    <svg width="20" height="20">
+                      <use href="./images/icons.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
         </nav>
 
@@ -178,7 +192,7 @@
           <button class="btn-main" type="button" data-modal-open>Заказать услугу</button>
         </div>
 
-        <!-- Backdrop -->
+        <!-- Modal Box -->
         <div class="backdrop backdrop--is-hidden" data-modal>
           <div class="modal">
             <button class="modal__btn-close" data-modal-close>
