Fix mobile menu position

--- a/portfolio.html
+++ b/portfolio.html
@@ -64,99 +64,101 @@
 
           <!-- Mobile Menu -->
           <div class="mobile-backdrop" data-menu>
-            <div class="mobile-menu" id="menu">
-              <!-- Mobile Site Navigation -->
-              <ul class="mobile-site-nav">
-                <li class="mobile-site-nav__item">
-                  <a class="mobile-site-nav__link" href="./index.html">Студия</a>
-                </li>
+            <div class="container mobile-backdrop__container">
+              <div class="mobile-menu" id="menu">
+                <!-- Mobile Site Navigation -->
+                <ul class="mobile-site-nav">
+                  <li class="mobile-site-nav__item">
+                    <a class="mobile-site-nav__link" href="./index.html">Студия</a>
+                  </li>
 
-                <li class="mobile-site-nav__item">
-                  <a
-                    class="mobile-site-nav__link mobile-site-nav__link--active"
-                    href="./portfolio.html"
-                    >Портфолио</a
-                  >
-                </li>
+                  <li class="mobile-site-nav__item">
+                    <a
+                      class="mobile-site-nav__link mobile-site-nav__link--active"
+                      href="./portfolio.html"
+                      >Портфолио</a
+                    >
+                  </li>
 
-                <li class="mobile-site-nav__item">
-                  <a class="mobile-site-nav__link" href="#contacts">Контакты</a>
-                </li>
-              </ul>
+                  <li class="mobile-site-nav__item">
+                    <a class="mobile-site-nav__link" href="#contacts">Контакты</a>
+                  </li>
+                </ul>
 
-              <!-- Mobile Contacts -->
-              <ul class="mobile-contacts">
-                <li class="mobile-contacts__item">
-                  <a class="mobile-contacts__link" href="tel:+380961111111">
-                    +38 096 111 11 11
-                  </a>
-                </li>
+                <!-- Mobile Contacts -->
+                <ul class="mobile-contacts">
+                  <li class="mobile-contacts__item">
+                    <a class="mobile-contacts__link" href="tel:+380961111111">
+                      +38 096 111 11 11
+                    </a>
+                  </li>
 
-                <li class="mobile-contacts__item">
-                  <a class="mobile-contacts__link" href="mailto:info@devstudio.com">
-                    info@devstudio.com
-                  </a>
-                </li>
-              </ul>
+                  <li class="mobile-contacts__item">
+                    <a class="mobile-contacts__link" href="mailto:info@devstudio.com">
+                      info@devstudio.com
+                    </a>
+                  </li>
+                </ul>
 
-              <!-- Social Links -->
-              <ul class="social">
-                <li class="social__item">
-                  <a
-                    class="social__link"
-                    href="https://www.instagram.com/"
-                    target="_blank"
-                    rel="nofollow noreferrer"
-                    aria-label="instagram"
-                  >
-                    <svg width="20" height="20">
-                      <use href="./images/icons.svg#instagram"></use>
-                    </svg>
-                  </a>
-                </li>
+                <!-- Social Links -->
+                <ul class="social">
+                  <li class="social__item">
+                    <a
+                      class="social__link"
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                      rel="nofollow noreferrer"
+                      aria-label="instagram"
+                    >
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                <li class="social__item">
-                  <a
-                    class="social__link"
-                    href="https://twitter.com/"
-                    target="_blank"
-                    rel="nofollow noreferrer"
-                    aria-label="twitter"
-                  >
-                    <svg width="20" height="20">
-                      <use href="./images/icons.svg#twitter"></use>
-                    </svg>
-                  </a>
-                </li>
+                  <li class="social__item">
+                    <a
+                      class="social__link"
+                      href="https://twitter.com/"
+                      target="_blank"
+                      rel="nofollow noreferrer"
+                      aria-label="twitter"
+                    >
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                <li class="social__item">
-                  <a
-                    class="social__link"
-                    href="https://www.facebook.com/"
-                    target="_blank"
-                    rel="nofollow noreferrer"
-                    aria-label="facebook"
-                  >
-                    <svg width="20" height="20">
-                      <use href="./images/icons.svg#facebook"></use>
-                    </svg>
-                  </a>
-                </li>
+                  <li class="social__item">
+                    <a
+                      class="social__link"
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                      rel="nofollow noreferrer"
+                      aria-label="facebook"
+                    >
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                <li class="social__item">
-                  <a
-                    class="social__link"
-                    href="https://www.linkedin.com/"
-                    target="_blank"
-                    rel="nofollow noreferrer"
-                    aria-label="linkedin"
-                  >
-                    <svg width="20" height="20">
-                      <use href="./images/icons.svg#linkedin"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
+                  <li class="social__item">
+                    <a
+                      class="social__link"
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                      rel="nofollow noreferrer"
+                      aria-label="linkedin"
+                    >
+                      <svg width="20" height="20">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </nav>
